--- a/index.html
+++ b/index.html
@@ -12,32 +12,19 @@
   </head>
   <body>
     <main class="container">
-      <!-- Image Above Everything -->
-      <div class="top-image">
-        <img
-          src="https://cdn.prod.website-files.com/63a2421f0a677e57265c643e/65ba259325713b605fc809d0_glide-truck-photo.jpg"
-          alt="Glide Truck"
-        />
-      </div>
-
       <!-- Top Full-Width Box -->
       <section class="hero">
         <h1>Access Your Customer Portal</h1>
         <a href="#" class="button">Click Here</a>
       </section>
 
-      <!-- Three Boxes Row -->
-      <section class="three-boxes">
-        <div class="info-box">
-          <h2>Follow us on Instagram</h2>
-          <a
-            href="https://www.instagram.com/glidewindowcleaning?igsh=MTVud2NrMWJ3dmo0dw=="
-            target="_blank"
-            rel="noopener"
-            class="button"
-            >Click Here</a
-          >
-        </div>
+      <!-- Image Below Hero -->
+      <div class="top-image">
+        <img src="glide_logo.png" alt="Glide Logo" />
+      </div>
+
+      <!-- Four Boxes Row -->
+      <section class="four-boxes">
         <div class="info-box">
           <h2>Leave a Review</h2>
           <a
@@ -49,12 +36,31 @@
           >
         </div>
         <div class="info-box">
-          <h2>Office Locations<br />&<br />Service Areas</h2>
+          <h2>Follow us on<br />Instagram</h2>
+          <a
+            href="https://www.instagram.com/glidewindowcleaning?igsh=MTVud2NrMWJ3dmo0dw=="
+            target="_blank"
+            rel="noopener"
+            class="button"
+            >Click Here</a
+          >
+        </div>
+        <div class="info-box">
+          <h2>Service Areas</h2>
           <a href="#" class="button">Click Here</a>
+        </div>
+        <div class="info-box">
+          <h2>Our Website</h2>
+          <a
+            href="https://www.glidecleaners.com/"
+            target="_blank"
+            class="button"
+            >Click Here</a
+          >
         </div>
       </section>
 
-      <!-- Bottom Rectangle -->
+      <!-- Referral Box -->
       <section class="referral-box">
         <h1>Refer a Friend</h1>
         <h1>You get $50 | They get $50</h1>
@@ -63,3 +69,4 @@
     </main>
   </body>
 </html>
+
